--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 PORT=3000
 DATABASE_PASSWORD=nancy1234
-DATABASE_URL=mongodb+srv://nancyasiuloka:nancy@cluster0.hjqdsqr.mongodb.net/
+DATABASE_URL=mongodb+srv://nancy1234:<PASSWORD>@nancycluster.xxsvf78.mongodb.net/natoursapp?retryWrites=true&w=majority
