made some changes

--- a/config.env
+++ b/config.env
@@ -2,3 +2,6 @@ NODE_ENV=development
 PORT=3000
 DATABASE_PASSWORD=nancy1234
 DATABASE_URL=mongodb+srv://nancy1234:<PASSWORD>@nancycluster.xxsvf78.mongodb.net/natoursapp?retryWrites=true&w=majority
+
+JWT_SECRET=my-jwt-secret-long-and-fast-reliable-password
+JWT_EXPIRES_IN=90d
