made some changes

--- a/config.env
+++ b/config.env
@@ -5,3 +5,6 @@ DATABASE_URL=mongodb+srv://nancy1234:<PASSWORD>@nancycluster.xxsvf78.mongodb.net
 
 JWT_SECRET=my-jwt-secret-long-and-fast-reliable-password
 JWT_EXPIRES_IN=90d
+
+EMAIL_USERNAME=my-gmail
+EMAIL_PASSWORD=my-password
