made some changes

--- a/config.env
+++ b/config.env
@@ -6,5 +6,7 @@ DATABASE_URL=mongodb+srv://nancy1234:<PASSWORD>@nancycluster.xxsvf78.mongodb.net
 JWT_SECRET=my-jwt-secret-long-and-fast-reliable-password
 JWT_EXPIRES_IN=90d
 
-EMAIL_USERNAME=my-gmail
-EMAIL_PASSWORD=my-password
+EMAIL_USERNAME=7e38d8808dd3c8
+EMAIL_PASSWORD=3fe5ddfd4471b1
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=25
