--- a/config.env
+++ b/config.env
@@ -5,6 +5,7 @@ DATABASE_URL=mongodb+srv://nancy1234:<PASSWORD>@nancycluster.xxsvf78.mongodb.net
 
 JWT_SECRET=my-jwt-secret-long-and-fast-reliable-password
 JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
 
 EMAIL_USERNAME=7e38d8808dd3c8
 EMAIL_PASSWORD=3fe5ddfd4471b1
