creating email template using pug to send emails

--- a/config.env
+++ b/config.env
@@ -11,3 +11,5 @@ EMAIL_USERNAME=7e38d8808dd3c8
 EMAIL_PASSWORD=3fe5ddfd4471b1
 EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=465
+
+EMAIL_FROM='mama@gmail.com'
